# simple-relm4-todo-app

./: Cargo.toml  README.md
.cargo/: config.toml
data/: com.github.tiago_vargas.simple_relm4_todo.desktop  com.github.tiago_vargas.simple_relm4_todo.gschema.xml
src/: app.rs  main.rs
src/app/: content.rs  settings.rs  style.css  task.rs
src/app/content/: task.rs
src/app/task/: task_row_actions.rs
