[package]
name = "simple-relm4-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
libadwaita = { version = "=0.4.4", features = ["v1_4"] }
relm4 = { version = "0.6.2", features = ["libadwaita"] }
relm4-components = "0.6.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
